--- a/app/iotupgr/webapp/i18n/i18n.properties
+++ b/app/iotupgr/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Performance by Turn
+appTitle=Monitor coefficient of activity
 
 #YDES: Application description
 appDescription=A Fiori application.
